--- a/1.html
+++ b/1.html
@@ -44,12 +44,12 @@
   <div class="row">
     <div class="col-12">
       <div class="info-box">
-        <h4>Shared Values:</h4>
-        <p>Both of you hold similar moral beliefs, which is a great foundation for any relationship. It shows you are likely to make decisions that align with each other's values.</p>
+        <h4>Honesty and Openness:</h4>
+        <p>You both believe in the power of being honest with each other. This establishes a solid foundation of trust, which is an essential component of a healthy relationship.</p>
       </div>
       <div class="info-box">
-        <h4>Mutual Support:</h4>
-        <p>It's heartening to see both of you believe in supporting each other's dreams and goals. This is a sign of a healthy, supportive partnership.</p>
+        <h4>Shared Values</h4>
+        <p>You have a shared moral compass and this alignment often leads to smoother navigation through life's challenges, strengthening your bond.</p>
       </div>
     </div>
   </div>
