--- a/2.html
+++ b/2.html
@@ -44,12 +44,12 @@
   <div class="row">
     <div class="col-12">
       <div class="info-box">
-        <h4>Openness:</h4>
-        <p>Though both of you feel you can be truthful with each other, there are moments where you feel that you might not be completely honest. Improving transparency in communication may enhance trust between both of you.</p>
+        <h4>Emotional Support:</h4>
+        <p>There are moments where your partner feels you're not there for her when she's upset or sad. This is an area where increased awareness and effort can significantly improve your connection.</p>
       </div>
       <div class="info-box">
-        <h4>Emotional Support:</h4>
-        <p>03121991M sometimes feels unheard or unsupported when they're upset. It's vital to foster an environment where both partners feel listened to and comforted in challenging times.</p>
+        <h4>Physical Closeness</h4>
+        <p>There appears to be a gap in mutual satisfaction regarding physical closeness. Opening up a dialogue to understand each other's needs better can result in mutual satisfaction.</p>
       </div>
     </div>
   </div>
