--- a/3.html
+++ b/3.html
@@ -44,16 +44,16 @@
   <div class="row">
     <div class="col-12">
       <div class="info-box">
-        <h4>Need for Reassurance:</h4>
-        <p>03121991M has shown a need for assurance, particularly around honesty in the relationship and the mutual decision-making process.</p>
+        <h4>Assurance of Emotional Availability:</h4>
+        <p>Your partner might require more reassurance that you're consistently available emotionally. The importance of actively listening when she's upset or sad can't be overstated. It's about more than just solving problems; it's about empathy and shared understanding.</p>
       </div>
       <div class="info-box">
-        <h4>Expression of Concerns:</h4>
-        <p>It seems that 03121991M might be seeking a safe space to express their thoughts and concerns without the fear of a negative reaction.</p>
+        <h4>Clear Communication about Physical Closeness:</h4>
+        <p>Your partner may have some ambiguity about your level of satisfaction regarding your physical closeness. It seems like there may be aspects of this she might not fully comprehend or be aware of.</p>
       </div>
       <div class="info-box">
-        <h4>Perception Alignment:</h4>
-        <p>There seems to be a difference between how 03121991M perceives the relationship and how they believe 03121991F perceives it. This could indicate a need for clearer communication and understanding between the two.</p>
+        <h4>Sensitivity in Providing Feedback:</h4>
+        <p>Your partner has expressed a preference for gentle feedback. She may need more understanding and delicacy from you in these situations, which might go unnoticed.</p>
       </div>
     </div>
   </div>
