--- a/actions.html
+++ b/actions.html
@@ -44,16 +44,16 @@
   <div class="row">
     <div class="col-12">
       <div class="info-box">
-        <h4>Encourage Openness:</h4>
-        <p>Reinforce that it's safe and encouraged for 03121991M to express their thoughts or concerns. This may involve showing patience, active listening, and responding with understanding rather than judgment or defensiveness.</p>
+        <h4>Emotional Support:</h4>
+        <p>Practice active listening when your partner expresses feelings of sadness or upset. Validate her emotions and let her know you are there for her, even if a solution isn't readily available. This can be challenging as the instinct may be to 'fix' the problem, but remember it's about shared understanding.</p>
       </div>
       <div class="info-box">
-        <h4>Support in Difficult Times:</h4>
-        <p>Pay close attention to times when 03121991M is upset. Try to empathize with their feelings and ask how you can help, rather than trying to solve the problem for them.</p>
+        <h4>Physical Closeness:</h4>
+        <p>Initiate a calm, open discussion about physical intimacy and ensure it's a judgement-free zone. Discuss what you both like, what could change, and how to achieve this. Be open to both giving and receiving feedback.</p>
       </div>
       <div class="info-box">
-        <h4>Celebrate Your Journey:</h4>
-        <p>As you approach your 18th month together, it could be a beautiful gesture to write a letter or create a memory book that reflects your shared experiences, victories, and lessons learned. This can affirm your commitment and shared growth, while also offering a tangible reflection of your journey together.</p>
+        <h4>Family Time:</h4>
+        <p>Given you've been together for 132 months and have 3 kids, it's important to make sure the relationship maintains its priority. Plan a regular date night, even if it's at home after the kids are asleep. Make it about connecting with each other as partners, not just parents.</p>
       </div>
     </div>
   </div>
