--- a/alignment.html
+++ b/alignment.html
@@ -44,9 +44,9 @@
   <div class="row">
     <div class="col-12">
       <div class="info-box">
-        <p>Out of 10 definite answers, you predicted your partners response in 3, while out of 9 definite questions, your partner predicted yours in 7. <br><strong>Well, it seems like 03121991M might have a bit of a psychic edge this round, but remember, understanding isn't a competition!</strong> 
+        <p>Out of 9 definite answers, you predicted your partner's response in 7, while out of 10 definite questions, your partner predicted yours in 6. <br><strong>Seems like you've got a slight edge this time, but remember, it's not about winning—it's about understanding each other better.</strong> 
           <br>
-          The fun part is in the discovery and continual learning about each other.</p>
+          Keep playing the game of love!</p>
       </div>
       <div>
         <img class="celebration-animation" src="CoupleDance.gif" alt="Celebration Animation">
