--- a/question.html
+++ b/question.html
@@ -42,9 +42,9 @@
   <div class="row">
     <div class="col-12">
       <div class="info-box">
-        <p>A great question to bolster your relationship could be, <b>"What is one thing you've wanted to tell me, but have been hesitant to bring up, and how can I make it easier for you to share such things in the future?"</b>.<br><br>
+        <p>A great question to start a conversation could be, <b>"What's one thing you've always wanted to do, but haven't yet, and how can I support you in achieving that goal?"</b>.<br><br>
 
-This can encourage transparency and understanding, reinforcing your bond as a couple.</p>
+This opens up a space for understanding and supporting each other's individual dreams, which can further strengthen your bond.</p>
       </div>
     </div>
   </div>
